examples/test/testpolicy17399.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17399
  namespace: namespace225
spec:
  podSelector:
    matchLabels:
      key44: value26
      key0: value22
      key21: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value8
          key48: value44
      podSelector:
        matchLabels:
          key27: value1
